--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
-# Change obs-plugintemplate to your plugin's name in a machine-readable format
-# (e.g.: obs-myawesomeplugin) and set 
-project(obs-plugintemplate VERSION 1.0.0)
+project(obs-tools VERSION 1.0.0)
 
-# Replace `Your Name Here` with the name (yours or your organization's) you want
-# to see as the author of the plugin (in the plugin's metadata itself and in the installers)
-set(PLUGIN_AUTHOR "Your Name Here")
-
-# Replace `com.example.obs-plugin-template` with a unique Bundle ID for macOS releases
-# (used both in the installer and when submitting the installer for notarization)
-set(MACOS_BUNDLEID "com.example.obs-plugintemplate")
-
-# Replace `me@contoso.com` with the maintainer email address you want to put in Linux packages
-set(LINUX_MAINTAINER_EMAIL "me@contoso.com")
+set(PLUGIN_AUTHOR "Stephane Lepin")
+set(MACOS_BUNDLEID "fr.palakis.obs-tools")
+set(LINUX_MAINTAINER_EMAIL "stephane.lepin@gmail.com")
 
 # TAKE NOTE: No need to edit things past this point
 
@@ -56,10 +47,16 @@ configure_file(
 )
 
 set(PLUGIN_SOURCES
-	src/plugin-main.c)
+	src/plugin-main.cpp
+    src/utils.cpp
+    src/QStatusLabel.cpp
+    src/status-label.cpp)
 
 set(PLUGIN_HEADERS
-	src/plugin-macros.generated.h)
+	src/plugin-macros.generated.h
+    src/utils.h
+    src/QStatusLabel.h
+    src/status-label.h)
 
 # --- Platform-independent build settings ---
 add_library(${CMAKE_PROJECT_NAME} MODULE ${PLUGIN_SOURCES} ${PLUGIN_HEADERS})
