--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set(LINUX_MAINTAINER_EMAIL "stephane.lepin@gmail.com")
 
 set(CLSOCKET_SHARED OFF)
 set(CLSOCKET_EXAMPLES OFF)
+set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(deps/clsocket)
+set(BUILD_SHARED_LIBS ON)
 
 # TAKE NOTE: No need to edit things past this point
 
