--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(LINUX_MAINTAINER_EMAIL "stephane.lepin@gmail.com")
 set(CLSOCKET_SHARED OFF)
 set(CLSOCKET_EXAMPLES OFF)
 set(CLSOCKET_DEP_ONLY ON)
+set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(deps/clsocket)
 
 # TAKE NOTE: No need to edit things past this point
