--- a/installer/installer-macOS.pkgproj.in
+++ b/installer/installer-macOS.pkgproj.in
@@ -36,6 +36,22 @@
 																		<key>GID</key>
 																		<integer>80</integer>
 																		<key>PATH</key>
+																		<string>../../build/QtNetwork</string>
+																		<key>PATH_TYPE</key>
+																		<integer>1</integer>
+																		<key>PERMISSIONS</key>
+																		<integer>292</integer>
+																		<key>TYPE</key>
+																		<integer>3</integer>
+																		<key>UID</key>
+																		<integer>0</integer>
+																	</dict>
+																	<dict>
+																		<key>CHILDREN</key>
+																		<array/>
+																		<key>GID</key>
+																		<integer>80</integer>
+																		<key>PATH</key>
 																		<string>../build/@CMAKE_PROJECT_NAME@.so</string>
 																		<key>PATH_TYPE</key>
 																		<integer>1</integer>
